--- a/Web_Netflax/public/css/Log_in.css
+++ b/Web_Netflax/public/css/Log_in.css
@@ -22,6 +22,127 @@ body {
     position: relative;
     margin-bottom: 10px;
 }
+/* Đặt frame đăng nhập và đăng ký ở giữa màn hình */
+#loginFrame  {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 350px;
+    height: 400px;
+    background-color: rgb(0, 0, 0, 0.85);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    z-index: 1000;
+    color: #999;
+    display: none; /* Ẩn mặc định */
+}
+#registerFrame{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 350px;
+    height: 600px;
+    background-color: rgb(0, 0, 0, 0.85);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    z-index: 1000;
+    color: #999;
+    display: none; /* Ẩn mặc định */
+}
+/* Hiển thị frame khi không ẩn */
+#loginFrame:not(.hidden), #registerFrame:not(.hidden) {
+    display: block;
+}
+
+.frame-content p {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #fffdfd;
+    font-weight: bold;
+}
+
+.frame-content {
+    text-align: left;
+}
+
+/* Kiểu chữ và định dạng cho các thẻ input */
+#loginFrame input, #registerFrame input {
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    font-family: 'Inter', sans-serif;
+    color: #333;
+    background-color: #f9f9f9;
+}
+
+#loginFrame input::placeholder, #registerFrame input::placeholder {
+    color: #999;
+    font-style: normal;
+    font-family: 'Courier New', Courier, monospace;
+    opacity: 80%;
+}
+
+#loginFrame input:focus, #registerFrame input:focus {
+    border-color: #e50914;
+    outline: none;
+    background-color: #fff;
+}
+.error-message {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+    display: none;
+}
+
+.hidden {
+    display: none;
+}
+
+/* Nút Đăng Ký */
+.btn1 {
+    font-weight: bold;
+    color: var(--text-color)!important;;
+    background-color: rgba(23, 23, 23, 0.47) !important;
+    border: 1px solid gray;
+    border-radius: 3px;
+    padding: 7px 16px;
+    cursor: pointer;
+}
+
+.btn1-red {
+    background-color: #e50914!important;;
+    color: rgb(0, 0, 0)!important;;
+    border: none;
+    padding: 10px;
+    margin-top: 90px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn1-red:hover {
+    color: #f4f3f3!important;
+}
+
+.btn1-secondary {
+    border:none;
+    color: black;
+}
+
+.btn1-secondary:hover {
+    background-color: #4c4c4c!important;
+}
+
 
 .box {
     background-color: black;
